Default initial page and some minor text changes

--- a/apache2/index.html
+++ b/apache2/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-     <meta http-equiv="refresh" content="0; url=https://localhost/trac" />
+     <meta http-equiv="refresh" content="0; url=https://localhost/trac/blog" />
   </body>
 </html>
 
